--- a/evalRH/src/main/resources/application.properties
+++ b/evalRH/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=evalRH
+# Thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+# ERPNext
+erpnext.api.url=http://erpnext.localhost:8000/api
+erpnext.api.key=80d965d9662eb50:53ea0bae5ec88c7
